1999-12-30  Tor Lillqvist  <tml@iki.fi>

	* gdk/gdk.c: If we don't HAVE_XCONVERTCASE we must #include
	gdkkeysyms.h to get the GDK_* keysym constants that are needed by
	gdk_keyval_convert_case(). Otherwise, gdk_keyval_convert_case()
	doesn't do anything.

	* gdk/gdk.def: Add gdk_xid_table_insert.

1999-12-18  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkfont-win32.c (gdk_text_size, gdk_text_extents):
	When handling a single character (text length == 1), don't handle
	it as if it was UTF-8.

1999-12-11  Tor Lillqvist  <tml@iki.fi>

	* Makefile.am: Distribute README.win32.
	
	* gdk/Makefile.am
	* gdk/win32/Makefile.am: Distribute Win32 files.

	* gdk/makefile.msc: New file.

	* gdk/gdk.c (gdk_arg_context_parse): Fix gccism (no statement
	after label).

	* gdk/gdkprivate.h: Must mark also gdk_error_warnings and
	gdk_error_code as GDKVAR, as they are referred outside GDK.

	* gdk/win32/makefile.msc: Update.

	* gdk/win32/gdkfont-win32.c (check_unicode_subranges): More
	tweaks. Check only if at least one of those Unicode subrange bits
	we care for is set. If no code page bits are set, guess (wildly)
	based on the charset.

	* gdk/win32/gdkinput-win32.c: Remove debugging leftover.

	* gdk/win32/gdkwindow-win32.c (gdk_window_new): Assure title is
	non-NULL.

	* gtk/gtkdnd.c
	* gtk/gtklayout.c
	* gtk/gtkplug.c
	* gtk/gtkselection.c
	* gtk/gtksocket.c
	* gtk/gtkwindow.c: Include x11/gdkx.h *or* win32/gdkwin32.c as
	appropriate. There must be a cleaner way to handle this?

	* gtk/gtkrc.c: Must include windows.h on Win32.

	* gtk/testgtk.c: No need to include gdkx.h.

	* gtk/makefile.cygwin: Correct invokation of genmarshal.pl.

1999-12-07  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkfont-win32.c: Fix string measurement code. For now,
	the rbearing is set to the same as the width, but this should be
	fixed.

1999-12-06  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkfont-win32.c (check_unicode_subranges): New
	function. If Windows doesn't tell us what Unicode subranges a font